# qnn-mnist

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_checkpoint.pt
app/: streamlit_app.py
configs/: default.yaml
data/checkpoints/: qnn_model_20251031_115324_config.yaml
scripts/: download_data.py  eval_cli.py  train_cli.py
src/: __init__.py  circuits.py  config.py  data.py  eval.py  qnn_model.py  train.py  utils.py
tests/: test_circuits.py  test_config.py  test_qnn_forward.py
